# GossipSea

./: .gitignore  README.md  cli_scraper_utils.py  extrapolation.py  graph.py  graph_html.py  holehe_scraper.py  maigret_scraper.py  main.py  nodes.py  pappers_scrapper.py  phoneinfoga_scraper.py  pyproject.toml  recherche_entreprises_scraper.py  sherlock_scraper.py
templates/: graph_template.html
tests/: test_extrapolation.py  test_graph.py  test_holehe.py  test_maigret.py  test_pappers.py  test_phoneinfoga.py  test_recherche_entreprises.py  test_sherlock.py
