[project]
name = "gossipsea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium>=4.46.0",
    "holehe",
    "httpx",
    "sherlock-project",
    "maigret",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
