[project]
name = "gossipsea"
version = "0.1.0"
description = "Maltego-style OSINT pipeline for gathering information on individuals, centered on French people"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holehe",
    "httpx",
    "sherlock-project",
    "maigret",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
